# jsonpatch-to-mongodb

./: .gitignore  LICENSE  Makefile  README.md  jsonpatch_to_mongodb.py  pyproject.toml
tests/: test_json_patch.py  test_json_patch_mongo.py
tests/snapshots/: tests_various_op.json
